[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myapi"
version = "1.0.0"
description = "FastAPI com JWT e API Key"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
]